上周五到本周四的

--- a/date_input/twoInput.html
+++ b/date_input/twoInput.html
@@ -154,7 +154,8 @@
 		var myDate   = new Date(),
 			week 	 = myDate.getDay(),
 			// 获取今天是本周的第几天 这里按1234567算 加3是因为找到上周五
-			minusDay = week != 0 ? week-1 : 6;
+			minusDay = week != 0 ? week-1 : -1;
+			// ==0 时-1 我也有疑问😖
 
     	var oneDay = 1000*60*60*24,//一天的毫秒数
     		// 上周星期五的格式化
