--- a/date_input/daterangepicker.html
+++ b/date_input/daterangepicker.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>对daterangepicker的一些借鉴</title>
 	<style>
-	*{ margin: 0;padding: 0; }
 	.main{ 
 		width: 80%;height: 50px;margin:100px auto;
 		background: #f1f1f1;border-radius: 4px;
@@ -19,9 +18,10 @@
 	.main input:focus{ border:1px solid red; }
 
 
-
+	*{ margin: 0;padding: 0; }
+	ul,li{ list-style: none; }
 	.RP-date-input{
-		width: 220px;height: 230px;position: absolute;
+		width: 220px;height: 240px;position: absolute;
 		background: #eee;border: 1px solid #ddd;
 		z-index: 999;border-radius: 5px;
 	}
@@ -41,16 +41,27 @@
 	    text-align: center;line-height: 30px;
 	}
 	.RP-date-input .RP-date-table{
-		width: 98%;margin-left: 1%;
+		width: 100%;margin-left: 0;
 	}
-	.RP-date-input .RP-date-table th,.RP-date-header .RP-date-table td{
-		width: 13%;text-align: center;height: 25px;
+	.RP-date-input .RP-date-table li,.RP-date-input #dateTableBody li,.RP-date-input #dateTableBody .RP-nodate-li{
+		float: left;margin-left: 1px;
+		width: 28px;text-align: center;height: 25px;
 		text-align: center;line-height: 25px;
 	}
-	.RP-date-input .RP-date-table th{ color: #000; }
-	.RP-date-input .RP-date-table td{
+
+	.RP-date-input .RP-date-table li{ color: #000;margin-left: 3px; }
+	.RP-date-input #dateTableBody{ float: left;width: 100%; }
+	.RP-date-input #dateTableBody li{
 		border: 1px solid #cccccc;background: #f6f6f6;
 	    font-weight: bold;color: #1c94c4;
+	    cursor: pointer;margin-top: 2px;
+	}
+	.RP-date-input #dateTableBody li:hover{
+		border:1px solid #fbcb09;color: #c77405;
+		background: #fdf5ce;font-weight: bold;
+	}
+	.RP-date-input #dateTableBody .RP-nodate-li{
+		background: #eee;border: none;margin-left: 3px;
 	}
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -67,38 +78,77 @@ $(document).ready(function($) {
 		this.element = element;
 	};
 	RangePicker.prototype = {
+		left: function(node){//获得当前这个node的左偏移量
+			if ( node ) {
+				return node.offset().left;
+			}else{
+				return 0;
+			}
+		},
+		top: function(node){//获得当前这个node的左偏移量
+			if ( node ) {
+				return node.offset().top + node.height() + 2;
+			}else{
+				return 0;
+			}
+		},
+		date: function(node, msDate){// @node点击改节点之后才出现的日期 @msDate传进来的毫秒数默认(不传)是今天
+			if ( msDate ) {
+				var nowadays = new Date( msDate );
+			}else{
+				var nowadays = new Date();
+			}
+
+			var	left = this.left(node), top = this.top(node);
+			var	nowYears = nowadays.getFullYear(),// 今年
+				nowMonth = nowadays.getMonth(),
+				oneDays  = 1000 * 60 * 60 * 24;
+
+			var locaDate = new Date(nowYears, nowMonth-1, 1),//上月1号
+				nextDate = new Date(nowYears, nowMonth, 1),// 本月份
+				days     = (nextDate.getTime() - locaDate.getTime())/oneDays;
+			var html = "";
+			var temp = "";
+			//获取这个月1号是星期几
+			var firstWeek = locaDate.getDay();
+			firstWeek = firstWeek == 0 ? 7 : firstWeek + 1;
+			for (var i = 0; i <= firstWeek; i++) {
+				temp += "<p class='RP-nodate-li'>&nbsp;</p>";
+			};
+			for (var i = 1; i <= days; i++) {
+				temp += "<li>" + i + "</li>";
+			};
+
+			html += '<div class="RP-date-input" style="left:'+left+"px;top:"+top+'px">' +
+    					'<div class="RP-date-header">' + 
+    					    '<span class="RP-month-chooce" style="float:left;"> - </span>' +
+    					    '<div class="RP-date-title">' +
+    					        '<i date-day="years">' + nowYears + '</i>年&nbsp;' +
+    					        '<i date-day="month">' + nowMonth + '</i>月' +
+    					    '</div>' +
+    					    '<span class="RP-month-chooce" style="float:right;"> + </span>' +
+    					'</div>' +
+    					'<div class="RP-date-table">' +
+    					        '<li>一</li><li>二</li><li>三</li><li>四</li><li>五</li><li>六</li><li>日</li>' +
+    					'</div>' + 
+    					'<ul id="dateTableBody">' + 
+    						temp +
+    					'</ul>' +
+    				'</div>';
+			return html;
+		},
 		show: function(event){
 			var root  = $("body"),//父节点
 				e= event ? event : window.event,
 				_this = e.target || e.srcElement;
 
-			_this = $(_this);
-			var left = _this.offset().left,
-				top  = _this.offset().top + _this.height() + 2;
-	
-			var html = "";
-			html += '<div class="RP-date-input" style="left:'+left+"px;top:"+top+'px">' +
-    					'<div class="RP-date-header">' + 
-    					    '<span class="RP-month-chooce" style="float:left;"> - </span>' +
-    					    '<div class="RP-date-title">' +
-    					        '<i date-day="years">2015</i>年&nbsp;' +
-    					        '<i date-day="month">7</i>月' +
-    					    '</div>' +
-    					    '<span class="RP-month-chooce" style="float:right;"> + </span>' +
-    					'</div>' +
-    					'<table class="RP-date-table">' +
-    					    '<thead><tr>' +
-    					        '<th>一</th><th>二</th><th>三</th><th>四</th><th>五</th><th>六</th><th>日</th>' +
-    					    '</tr></thead>' +
-    					    '</thead id="dateTableBody">' + 
-    					    '<tbody>' +
-    					    '</tbody>' +
-    					'</table>' +
-    				'</div>';
+			var html = this.date($(_this));
 
     		if ( root.find('.RP-date-input').length===0 ) {
 	    		root.append(html);
     		}else{
+    			var left = this.left($(_this)),
+    				top  = this.top($(_this));
     			root.find('.RP-date-input').css({
     				"display": "block",
     				"left":left+"px",
@@ -118,7 +168,7 @@ $(document).ready(function($) {
 		var test = new RangePicker(el),
 			root = $("body");
 		if ( el.is('input') ) {
-			el.on("click"||"focus", function(event) {
+			el.on("click"||"focus"||"keyup", function(event) {
 				test.show(event);
 			});
 		}else{
