--- a/highCharts/zhuxing.html
+++ b/highCharts/zhuxing.html
@@ -67,31 +67,41 @@ $(document).ready(function(){
                 		alert(this.name);
                 	}
                 },
-				// stacking: 'normal',//重叠否
-				// dataLabels: {//重叠的数据格式
-				   // enabled: true,
-				   // color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white',
-				   // style: {
-				      // textShadow: '0 0 3px black'
-				   // }
-				// }
+				stacking: 'normal',//重叠否
+				dataLabels: {//重叠的数据格式
+				   enabled: true,
+				   color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white',
+				   style: {
+				      textShadow: '0 0 3px black'
+				   }
+				}
             }
         },
         series: [{
             name: 'Tokyo',
-            data: [49.9, -71.5, -106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-
+            data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
+            color: "rgb(255,255,255)",
+            borderWidth: 1,
+            borderColor: '#000'
         }, {
             name: 'New York',
-            data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
-
+            data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3],
+            color: "rgb(90,111,150)",
+            borderWidth: 1,
+            borderColor: '#000'
         }, {
             name: 'London',
-            data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
+            data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2],
+            color: "rgb(69,91,123)",
+            borderWidth: 1,
+            borderColor: '#000'
 
         }, {
             name: 'Berlin',
-            data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
+            data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1],
+            color: "rgb(55,77,110)",
+            borderWidth: 1,
+            borderColor: '#000'
 
         }]
 
@@ -107,6 +117,7 @@ $(document).ready(function(){
         // }
 
     };
+
     $('.high').highcharts(high);
 });
 </script>
