git的一些事实

--- a/highCharts/zhuxing.html
+++ b/highCharts/zhuxing.html
@@ -13,6 +13,20 @@
 <body>
 	<div class="high"></div>
 <script>
+
+document.
+
+
+
+
+
+
+
+
+
+
+
+
 $(document).ready(function(){
 
     var high = {
